test/decl/func/static_func.code
// RUN: %target-typecheck-verify-language

static fn gf1() {} // expected-error {{static methods may only be declared on a type}}{{1-8=}}
class fn gf2() {} // expected-error {{class methods may only be declared on a type}}{{1-7=}}

override static fn gf3() {} // expected-error {{static methods may only be declared on a type}}{{10-17=}}
    // expected-error@-1 {{'override' can only be specified on class members}}{{1-10=}}
override class fn gf4() {} // expected-error {{class methods may only be declared on a type}}{{10-16=}}
    // expected-error@-1 {{'override' can only be specified on class members}}{{1-10=}}

static override fn gf5() {} // expected-error {{static methods may only be declared on a type}}{{1-8=}}
    // expected-error@-1 {{'override' can only be specified on class members}}{{8-17=}}
class override fn gf6() {} // expected-error {{class methods may only be declared on a type}}{{1-7=}}
    // expected-error@-1 {{'override' can only be specified on class members}}{{7-16=}}

static gf7() {} // expected-error {{expected declaration}}
class gf8() {} // expected-error {{expected '{' in class}}

fn inGlobalFunc() {
  static fn gf1() {} // expected-error {{static methods may only be declared on a type}}{{3-10=}}
  class fn gf2() {} // expected-error {{class methods may only be declared on a type}}{{3-9=}}
}

struct InMemberFunc {
  fn member() {
    static fn gf1() {} // expected-error {{static methods may only be declared on a type}}{{5-12=}}
    class fn gf2() {} // expected-error {{class methods may only be declared on a type}}{{5-11=}}
  }
}

struct DuplicateStatic {
  static static fn f1() {} // expected-error{{'static' cannot appear after another 'static' or 'class' keyword}}{{10-17=}}
  static class fn f2() {} // expected-error{{'class' cannot appear after another 'static' or 'class' keyword}}{{10-16=}}
  class static fn f3() {} // expected-error{{'static' cannot appear after another 'static' or 'class' keyword}}{{9-16=}} expected-error{{class methods are only allowed within classes; use 'static' to declare a static method}}{{3-8=static}}
  class class fn f4() {} // expected-error{{'class' cannot appear after another 'static' or 'class' keyword}}{{9-15=}} expected-error{{class methods are only allowed within classes; use 'static' to declare a static method}}{{3-8=static}}
  override static static fn f5() {} // expected-error{{'static' cannot appear after another 'static' or 'class' keyword}}{{19-26=}} expected-error{{'override' can only be specified on class members}} {{3-12=}}
  static override static fn f6() {} // expected-error{{'static' cannot appear after another 'static' or 'class' keyword}}{{19-26=}} expected-error{{'override' can only be specified on class members}} {{10-19=}}
  static static override fn f7() {} // expected-error{{'static' cannot appear after another 'static' or 'class' keyword}}{{10-17=}} expected-error{{'override' can only be specified on class members}} {{17-26=}}
  static final fn f8() {} // expected-error {{only classes and class members may be marked with 'final'}}
}

struct S { // expected-note {{extended type declared here}}
  static fn f1() {}
  class fn f2() {} // expected-error {{class methods are only allowed within classes; use 'static' to declare a static method}} {{3-8=static}}
}

extension S {
  static fn ef1() {}
  class fn ef2() {} // expected-error {{class methods are only allowed within classes; use 'static' to declare a static method}} {{3-8=static}}
}

enum E { // expected-note {{extended type declared here}}
  static fn f1() {}
  class fn f2() {} // expected-error {{class methods are only allowed within classes; use 'static' to declare a static method}} {{3-8=static}}
  static final fn f3() {} // expected-error {{only classes and class members may be marked with 'final'}}
}

extension E {
  static fn f4() {}
  class fn f5() {} // expected-error {{class methods are only allowed within classes; use 'static' to declare a static method}} {{3-8=static}}
}

class C {
  static fn f1() {} // expected-note 3{{overri}}
  class fn f2() {}
  class fn f3() {}
  class fn f4() {} // expected-note {{overri}}
  class fn f5() {} // expected-note {{overri}}
  static final fn f6() {} // expected-error {{static declarations are already final}} {{10-16=}}
  final class fn f7() {} // expected-note 3{{overri}}
}

extension C {
  static fn ef1() {}
  class fn ef2() {} // expected-note {{overri}}
  class fn ef3() {} // expected-note {{overri}}
  class fn ef4() {} // expected-note {{overri}}
  class fn ef5() {} // expected-note {{overri}}
}

class C_Derived : C {
  override static fn f1() {} // expected-error {{cannot override static method}}
  override class fn f2() {}
  class override fn f3() {}

  override class fn ef2() {} // expected-error {{cannot be overridden}}
  class override fn ef3() {} // expected-error {{cannot be overridden}}
  override static fn f7() {} // expected-error {{static method overrides a 'final' class method}}
}

class C_Derived2 : C {
  override final class fn f1() {} // expected-error {{cannot override static method}}
  override final class fn f7() {} // expected-error {{class method overrides a 'final' class method}}
}
class C_Derived3 : C {
  override class fn f1() {} // expected-error {{cannot override static method}}
  override class fn f7() {} // expected-error {{class method overrides a 'final' class method}}
}

extension C_Derived {
  override class fn f4() {} // expected-error {{cannot be overridden}}
  class override fn f5() {} // expected-error {{cannot be overridden}}

  override class fn ef4() {} // expected-error {{cannot be overridden}}
  class override fn ef5() {} // expected-error {{cannot be overridden}}
}

protocol P { // expected-note{{extended type declared here}}
  static fn f1()
  static fn f2()
  static fn f3() {} // expected-error {{protocol methods must not have bodies}}
  static final fn f4() // expected-error {{only classes and class members may be marked with 'final'}}
  class fn f5() // expected-error {{class methods are only allowed within classes; use 'static' to declare a requirement fulfilled by either a static or class method}} {{3-8=static}}
}

extension P {
  class fn f6() {} // expected-error {{class methods are only allowed within classes; use 'static' to declare a static method}} {{3-8=static}}
}

